Mon Jun  9 03:26:03 2008  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* NEWS: Mention new constants.

Mon Jun  9 03:24:18 2008  Tanaka Akira  <akr@fsij.org>

	* hash.c (hash_i): make Hash#hash order insensitive.

Mon Jun  9 03:22:43 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (VENDOR_DIR): use LIBDIR instead of PREFIX as well as
	  SITE_DIR.  a patch from Richard Brown <rbrown AT exherbo.org> in
	  [ruby-core:17129].

Mon Jun  9 03:21:20 2008  Tanaka Akira  <akr@fsij.org>

	* gc.c (os_obj_of): assure to not free the scanning heap.

Mon Jun  9 03:20:12 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* io.c (rb_open_file, rb_io_s_sysopen): fmode should be unsigned int.
	  fixed [ruby-dev:34979]

Fri Jun  6 21:16:55 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/Makefile.sub (COMMON_HEADERS): include ws2tcpip.h.

	* ext/socket/addrinfo.h (addrinfo, getaddrinfo, getnameinfo,
	  freehostent, freeaddrinfo): undef before define because these are
	  macros in some versions of Windows SDK.

	* win32/setup.mak: maybe commit miss.

Fri Jun  6 19:34:22 2008  Akinori MUSHA  <knu@iDaemons.org>

	* mkconfig.rb: hide build path from rbconfig.rb.

	* util.c (ruby_strtod, dtoa): initialize more variables for error
	  handling.

	* io.c (rscheck), marshal.c (w_nbyte, w_bytes, w_unique),
	  (path2class, path2module): constified.

	* pack.c (pack_unpack), process.c (rb_syswait): suppress warnings.

	* suppress warnings on cygwin, mingw and mswin.

Fri Jun  6 19:23:53 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (file_expand_path): fix for non-existent files and SFN of
	  symlinks.  [ruby-talk:303736]

Fri Jun  6 18:25:43 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/iconv: Tests fixed.

Fri Jun  6 17:04:56 2008  Akinori MUSHA  <knu@iDaemons.org>

	* win32/win32.h: include ws2tcpip.h. fixed [ruby-Bugs-20528]

	* lib/time.rb (Time.xmlschema): don't use float.  fix
	  http://rubyforge.org/tracker/index.php?func=detail&group_id=426&atid=1698&aid=20504
