@@ -2,7 +2,7 @@
 #define RUBY_RELEASE_DATE "2008-06-09"
 #define RUBY_VERSION_CODE 187
 #define RUBY_RELEASE_CODE 20080609
-#define RUBY_PATCHLEVEL 15
+#define RUBY_PATCHLEVEL 16
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
